fix: updated category endpoint toggle activation, added new constrain to activation of coins by first checking if the category is active, updated docs
